whoami/02-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sync-tools
  namespace: default
spec:
  entryPoints:
    - http
  routes:
    - match: Host(`whoami.cert.containous.cloud`)
      kind: Rule
      services:
        - name: sync-tools
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sync-tools-tls
  namespace: default
spec:
  entryPoints:
    - https
  routes:
  - match: Host(`whoami.cert.containous.cloud`)
    kind: Rule
    services:
      - name: sync-tools
        port: 80
  tls:
    secretName: sync-tools-cert
